src/test/deca/context/valid/created/arithm-op.deca
//Description :
// Test d'une opération arithmétique en Declaration
//
// Resultats :
//



{
    1 + 2;
}
