src/test/deca/context/invalid/created/if-then-else-null-condition.deca
//Description :
// Test d'un if then else avc une condition null
//
// Resultats :
// Erreur

{
    if (null) {
        print("Oui");
    } else {
        print("Non");
    }
}
